--- a/ProjecIntegration.Api/ErrorLib/Domain.csproj
+++ b/ProjecIntegration.Api/ErrorLib/Domain.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Model\" />
-    <Folder Include="Exception\" />
+    <Folder Include="interface\" />
   </ItemGroup>
 
 </Project>
