implementation: repository générique / Entity Configuration /Entity Controller
implementation du répository générique et début d'implementation pour les repository plus spécifique aux entité  .

--- a/ProjecIntegration.Api/ProjecIntegration.Api/ProjecIntegration.Api.csproj
+++ b/ProjecIntegration.Api/ProjecIntegration.Api/ProjecIntegration.Api.csproj
@@ -15,4 +15,9 @@
     <Folder Include="Interfaces\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\ErrorLib\Domain.csproj" />
+  </ItemGroup>
+
 </Project>
