[updt] changement d'architecture

--- a/ProjecIntegration.Api/ProjecIntegration.Api/ProjecIntegration.Api.csproj
+++ b/ProjecIntegration.Api/ProjecIntegration.Api/ProjecIntegration.Api.csproj
@@ -7,17 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Data\Data.csproj" />
-    <ProjectReference Include="..\ErrorLib\Domain.csproj" />
+    <Folder Include="Infrastructure\services\" />
+    <Folder Include="Infrastructure\Persistence\Migration\" />
+    <Folder Include="Models\Validator\" />
   </ItemGroup>
 
 </Project>
