--- a/ProjecIntegration.Api/Blazor.UI/Blazor.UI.csproj
+++ b/ProjecIntegration.Api/Blazor.UI/Blazor.UI.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.1" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.2" />
   </ItemGroup>
 
   <ItemGroup>
