--- a/ProjecIntegration.Api/ApplciationPublication/ApplciationPublication.csproj
+++ b/ProjecIntegration.Api/ApplciationPublication/ApplciationPublication.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
