intégration des buisnness layer

--- a/ProjecIntegration.Api/ApplciationPublication/ApplciationPublication.csproj
+++ b/ProjecIntegration.Api/ApplciationPublication/ApplciationPublication.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Common\Dto\" />
     <Folder Include="Service\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
