--- a/ProjecIntegration.Api/WebApi/appsettings.json
+++ b/ProjecIntegration.Api/WebApi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=666MACHNIK\\COURS2021;Database=Integrationfinal;Trusted_Connection=True;TrustServerCertificate=True;"
+    "Default": "Server=666MACHNIK\\COURS2021;Database=Integrationfinal;Trusted_Connection=True;TrustServerCertificate=True;",
+    "MongoDb": "mongodb+srv://Quent:PrimeEvil96*@cluster0.zw754ch.mongodb.net/"
   },
   "Logging": {
     "LogLevel": {
